# shrike-lite

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.html  README.md  RP2040vsFPGA.html  generating_your_first_bitstream.html  genindex.html  getting_started.html  hardware_overview.html  index.html  introduction.html  objects.inv  reading_list.html  search.html  searchindex.js  shrike-lite_v_1.uf2  shrike_arduino_guide.html  shrike_cli_guide.html  shrike_pinouts.html  shrike_rp2350.uf2  shrike_v1.4_r0.1_v2.uf2  tools_setup_guide.html  verilog_style_guide.html
.doctrees/: README.doctree  RP2040vsFPGA.doctree  environment.pickle  generating_your_first_bitstream.doctree  getting_started.doctree  hardware_overview.doctree  index.doctree  introduction.doctree  reading_list.doctree  shrike_arduino_guide.doctree  shrike_cli_guide.doctree  shrike_pinouts.doctree  tools_setup_guide.doctree  verilog_style_guide.doctree
Docs/: README.md  conf.py  generating_your_first_bitstream.md  getting_started.md  hardware_overview.rst  index.rst  shrike_arduino_guide.md  shrike_pinouts.md
_sources/: generating_your_first_bitstream.md.txt  getting_started.md.txt  hardware_overview.rst.txt  index.rst.txt  introduction.md.txt  shrike_arduino_guide.md.txt  shrike_pinouts.md.txt  tools_setup_guide.md.txt
docs/: README.md  conf.py  generating_your_first_bitstream.md  reading_list.md  shrike_cli_guide.md  shrike_pinouts.md  tools_setup_guide.md  verilog_style_guide.md
utils/shrike-ctl/: CMakeLists.txt  README.md  main.c  shrike-ctl.py  shrike-ctl.uf2
(+70 files in other folders)
